static/css/style.css
html, body {
  background-color: lightgray;
  height: 100%;
}

h2 {
  margin-top: 10px;
  margin-bottom: 1px;
}

h3 {
  width: 120px;
  margin: auto;
}

a {
  color: #b8cf69;
  text-decoration: none;
  margin-right: auto;
}

a:hover {
  color: lightgray;
}

ul {
  list-style-type: none;
}

li {
  list-style-type: none;
}

button, .submit_description, .submit_book {
  background-color: lightgray;
  color: black;
  min-width: 48px;
  height: 48px;
}

button.login {
  background-color: inherit;
  border: none;
  padding: 0px;
  cursor: pointer;
  height: auto;
}

.heading, .loggedinheading, .origheading {
  margin-top: 0px;
  padding-top: 3px;
  padding-bottom: 1px;
  padding-left: 10px;
  padding-right: 10px;
  background-color: #718eb1;
  text-align: center;
  color: #b8cf69;
  font-family: Arial;
}

.loggedinheading {
  width: 10%
  min-width: 90px;
  max-width: 200px;
}

.text_blend {
  color: #718eb1;
}

.origheading {
  width: 100%;
  text-align: match-parent;
}

.header_btn {
  margin-top: 60px;
}

.container, .book_view_container, .new_book_container {
  display: flex;
  flex-direction: row;
}

.featured_flex_container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.footer {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.footer_text {
  text-align: right;
  color: #718eb1;
  padding: 5px;
}

a.footer_link:hover {
  color: yellow;
}

.main_container {
  display: flex;
  flex-direction: row;
  height: 80%;
}

.sidebar {
  /*flex: initial;*/
  width: 25%;
  min-width: 120px;
  max-width: 200px;
  margin-top: 10px;
  background-color: #718eb1;
  text-align: center;
  color: #b8cf69;
  overflow-y: auto;
}

.sidebar_line, .login_line, .FB_login_line {
  margin-left: 12.5%;
  width: 75%;
  align-content: center;
  height: 1px;
  border-top: 2px solid #b8cf69;
  margin-bottom: 10px;
}

div.sidebar_links {
  min-height: 48px;
  text-align: center;
  margin: auto;
}

.main_content {
  width: 75%;
  margin-top: 10px;
  margin-left: 10px;
  background-color: #a4aaae;
  overflow-y: auto;
}

.login_box {
  width: 300px;
  height: 300px;
  margin: auto;
  margin-top: calc(50vh - 150px);
  background-color: #718eb1;
  text-align: center;
  color: #b8cf69;
  border-color: black;
  border-width: 3px;
  border-style: solid;
}

.login_successful {
  padding-top: 25vh;
  margin: auto;
  text-align: center;
}

.login_space {
  width: 300px;
  height: 150px;
}

.login_line {
  margin-left: 25%;
  width: 50%
}

.FB_login_line {
  margin-left: 20%;
  width: 60%;
}

.book_title {
  margin-left: 15px;
  width: 100%;
  height: auto;
  margin-bottom: 10px;
  margin-top: 10px;
}

.book_img_holder {
  margin-left: 15px;
  min-height: 150px;
  min-width: 120px;
  max-width: 180px;
  height: 15%;
  background-color: #718eb1;
}

.book_img_holder_featured {
  margin-left: 15px;
  min-height: 150px;
  min-width: 120px;
  max-width: 180px;
  height: 15%;
  margin-bottom: 5px;
  padding-bottom: 5px;
  background-color: #718eb1;
 }

.book_img {
  margin-left: 5%;
  margin-top: 5%;
  height: 90%;
  width: 90%;
  object-fit: contain;
}

.book_info, .new_book_info {
  position: relative;
  margin-left: 10px;
  margin-right: 15px;
  min-width: 140px;
  width: 100%;
  max-width: 315px;
  background-color: #718eb1;
  color: #b8cf69;
}

.new_book_info {
  padding-left: 10px;
}

textarea {
  width: inherit;
  resize: none;
}

.modify_book {
  position: absolute;
  bottom: 5px;
  right: 5px;
}

.delete, .new_book {
  width: auto;
}

.description {
  margin-bottom: 58px;
}

.submit_description, .submit_book {
  width: auto;
  margin-left: 5px;
  vertical-align: calc((48px / 2) - 5px);
}

.add_genre_holder {
  position: relative;
  min-width: 55px;
}

.newGenre {
  position: absolute;
  bottom: 5px;
  right: 5px;
}

.addGenreButton {
  margin-left: 24px;
  width: auto;
}

@media only screen and (min-width: 800px) {
  .main_content {
    width: calc(100% - 210px);
  }
}

@media only screen and (max-width: 389px) {
  .header_btn {
    margin-top: 110px;
  }
}

@media only screen and (max-width: 460px) {
    .book_view_container {
      flex-direction: column;
    }

    .book_img_holder {
      margin-left: 15%;
      margin-right: 15%;
    }

    .book_info {
      margin-top: 5px;
      margin-left: 10%;
      margin-right: 10%;
      min-width: 100px;
      max-width: 210px;
    }

    .main_container {
      height: auto;
    }
}

@media only screen and (max-width: 376px) {
  .book_info {
    margin-top: 5px;
    margin-left: 10%;
    margin-right: 10%;
    width: 80%;
    min-width: 100px;
    max-width: 190px;
  }

  .main_container {
    height: auto;
  }
}

